SomeDAFEstudy/алгоритмы/2 семестр/ass#2/compiling_error.txt
/Users/18myself/Documents/GitHub/personalrep/personalrep/SomeDAFEstudy/алгоритмы/2 семестр/ass#2/task5.cpp:15:25: warning: in-class initialization of non-static data member is a C++11 extension [-Wc++11-extensions]
    const Field* parent = nullptr;
                        ^
/Users/18myself/Documents/GitHub/personalrep/personalrep/SomeDAFEstudy/алгоритмы/2 семестр/ass#2/task5.cpp:18:19: warning: in-class initialization of non-static data member is a C++11 extension [-Wc++11-extensions]
    short graph_d = 0;
                  ^
/Users/18myself/Documents/GitHub/personalrep/personalrep/SomeDAFEstudy/алгоритмы/2 семестр/ass#2/task5.cpp:19:18: warning: in-class initialization of non-static data member is a C++11 extension [-Wc++11-extensions]
    short manh_d = 0;
                 ^
/Users/18myself/Documents/GitHub/personalrep/personalrep/SomeDAFEstudy/алгоритмы/2 семестр/ass#2/task5.cpp:170:8: warning: first declaration of class template specialization of 'hash' outside namespace '__1' is a C++11 extension [-Wc++11-extensions]
struct hash<Field>
       ^
/Library/Developer/CommandLineTools/usr/include/c++/v1/type_traits:397:50: note: explicitly specialized declaration is here
template <class _Tp> struct _LIBCPP_TEMPLATE_VIS hash;
                                                 ^
/Users/18myself/Documents/GitHub/personalrep/personalrep/SomeDAFEstudy/алгоритмы/2 семестр/ass#2/task5.cpp:180:9: error: no member named 'emplace' in 'std::__1::set<Field, std::__1::less<Field>, std::__1::allocator<Field> >'
    pif.emplace(p);
    ~~~ ^
/Users/18myself/Documents/GitHub/personalrep/personalrep/SomeDAFEstudy/алгоритмы/2 семестр/ass#2/task5.cpp:186:14: warning: 'auto' type specifier is a C++11 extension [-Wc++11-extensions]
        for (auto child : pw) {
             ^
/Users/18myself/Documents/GitHub/personalrep/personalrep/SomeDAFEstudy/алгоритмы/2 семестр/ass#2/task5.cpp:186:25: warning: range-based for loop is a C++11 extension [-Wc++11-extensions]
        for (auto child : pw) {
                        ^
/Users/18myself/Documents/GitHub/personalrep/personalrep/SomeDAFEstudy/алгоритмы/2 семестр/ass#2/task5.cpp:199:23: error: no member named 'emplace' in 'std::__1::set<Field, std::__1::less<Field>, std::__1::allocator<Field> >'
                  pif.emplace(child);
                  ~~~ ^
6 warnings and 2 errors generated.
